Mon Mar  7 10:28:00 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* object.c (inspect_obj): unintended space removal.
	  [ruby-dev:25810]

	* eval.c (rb_exec_recursive): should not use NODE in disclosed
	  context.  [ruby-dev:25812]

	* io.c (rb_f_open): need not to check if to_open value is a
	  T_FILE.  [ruby-dev:25812]

Mon Mar  7 01:21:01 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil/tkutil.c: follow the change of st.c (committed 
	  at Fri, 4 Mar 2005 15:47:47 +0900 by matz)

Mon Mar  7 00:01:55 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: fail to call TclTkLib.mainloop when $SAFE==4

Sun Mar  6 13:04:10 2005  Dee Zsombor  <zsombor@ruby-lang.org>

	* misc/ruby-electric.el: added.
	* misc/Readme: updated.

Sun Mar  6 11:47:10 2005  Sam Roberts  <sroberts@uniserve.com>

	* lib/pp.rb: rdoced.  [ruby-core:4490]

Sun Mar  6 11:36:37 2005  Tanaka Akira  <akr@m17n.org>

	* lib/pp.rb (File::Stat#pretty_print): Etc.getpwuid and Etc.getgrgid
	  may return nil.  [ruby-talk:129826]
	  reported by Daniel Berger.

Sun Mar  6 06:34:31 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_start_ssl): should wait for that
	  the underlying IO become readable or writable if the error was
	  SSL_ERROR_WANT_READ or SSL_ERROR_WANT_WRITE. [ruby-dev:25795]

	* ext/openssl/ossl_ssl.c (ossl_ssl_read, ossl_ssl_write): ditto.

	* ext/openssl/lib/openssl/buffering.rb
	  (Buffering#consume_rbuf): pointless eof flag resetting is deleted.
	  (Buffering#read): should return an empty string if the specified
	  size is zero.
	  (Buffering#readpartial): new method.
	  (Buffering#readline): fix typo.
	  (Buffering#getc): return the first character of string correctly.
	  (Buffering#readchar): fix typo.
	  (Buffering#eof?): should read again it the input buffer is empty.
	  (Buffering#do_write): should rescue Errno::EAGAIN.
	  (Buffering#puts): use "\n" as the output field separator.
