@@ -1,3 +1,8 @@
+Mon Mar  7 14:13:23 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>
+
+	* ext/openssl/lib/openssl/buffering.rb (Buffering#initialize):
+	  should set @eof and @rbuffer.
+
 Mon Mar  7 10:28:00 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* object.c (inspect_obj): unintended space removal.
